force-app/main/default/objects/Replacement_Request__c/Replacement_Request__c.object-meta.xml
<CustomObject>
    <label>Replacement Request</label>
    <nameField>
        <label>Replacement Reason</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Replacement Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>