force-app/main/default/objects/Replacement_Request__c/fields/Customer_Notification__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notification__c</fullName>
    <label>Customer Notification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>