force-app/main/default/objects/Replacement_Request__c/fields/Defect_Report_For_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Defect_Report_For_Replacement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defect Report For Replacement</label>
    <referenceTo>Defect_Report__c</referenceTo>
    <relationshipLabel>Replacement Requests</relationshipLabel>
    <relationshipName>Replacement_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>