force-app/main/default/objects/Replacement_Request__c/fields/Replacement_Laptop__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Laptop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replacement Laptop</label>
    <referenceTo>Laptop__c</referenceTo>
    <relationshipLabel>Replacement Requests</relationshipLabel>
    <relationshipName>Replacement_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>